# OmniVoice_v2

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  multilang.yaml
docs/: architecture_diff_vs_plain_omnivoice.html  architecture_diff_vs_plain_omnivoice.md  omnivoice_emotion_transfer_requirements_design.md
scripts/: a1_pinyin_zh_eval.py  accent_jp_target_test.py  accent_sweep.py  asr_native_zh_baseline.py  baseline_crosslingual.py  baseline_v2.py  baseline_v3.py  bench_pipeline_parallel.py  build_all_axes.py  build_axis_artifacts.py  build_graft_artifacts.py  build_seedvc_packet.py  build_strong_tau_packet.py  build_vc_comparison_packet.py  disentanglement_validation.py  eps3_emotion2vec_inject.py  eps3_emotion_f0_transfer.py  eps3_listening_packet.py  eps3_openvoice_tcc.py  eps3_ovc_strong_tau.py  eps3_quality_variants.py  eps3_seedvc_emotion_ref.py  eps3_seedvc_steps_sweep.py  eps3_seedvc_test.py  eps3_semantic_vc_test.py  eps3_tune.py  eps3_tune_phase2.py  graft_alpha_beta_sweep.py  graft_axis_sweep.py  graft_axis_validate.py  graft_layer_tuning.py  graft_smoke_per_lang.py  graft_target_scale_sweep.py  graft_window_pmask_sweep.py  graft_zh_compare.py  inspect_zh_compare.py  lid_check.py  multilang_cer.py  multilang_cer_plain_omnivoice.py  multilang_cer_vi_ablation.py  (+11 more)
src/ovet/: config.py  types.py
tests/: test_accent_steering.py  test_evaluator_fixes.py  test_multilang.py  test_phase2_modules.py  test_phase3_modules.py  test_phase4a.py  test_phase4b.py  test_phase5.py  test_position_mask.py  test_pure_logic.py  test_quality_steering.py
(+37 files in other folders)
